--- a/mta.yaml
+++ b/mta.yaml
@@ -58,19 +58,19 @@ modules:
           target-path: resources/
 
   # ------------------------------------------------------------
-  # Python Backend Module (deployed as a standard Cloud Foundry app)
+  # Python Backend Module (deployed as a standard Cloud Foundry app using generic type)
   # ------------------------------------------------------------
   - name: pm-analyzer-backend
-    type: org.cloudfoundry.app # Module type remains org.cloudfoundry.app
+    type: com.sap.xs.nodejs # Changed module type to a more generic one for CF apps
     path: backend # Path to your existing backend directory
     parameters:
       disk-quota: 512M
       memory: 512M
-      buildpack: python_buildpack
-      command: uvicorn app.main:app --host 0.0.0.0 --port $PORT
-      routes:
-        - route: pm-analyzer-backend-${org}-${space}.cfapps.${region}.hana.ondemand.com # Adjust as needed
-    build-parameters: # Added build-parameters section for org.cloudfoundry.app
+      buildpack: python_buildpack # Specify the Python buildpack
+      command: uvicorn app.main:app --host 0.0.0.0 --port $PORT # Command to start your app
+      routes: # Define a route for your backend application
+        - route: pm-analyzer-backend-${org}-${space}.cfapps.${region}.hana.ondemand.com # Example route, adjust as needed
+    build-parameters:
       builder: custom
       commands:
         - pip install -r requirements.txt # Install Python dependencies during build
