--- a/backend/manifest.yml
+++ b/backend/manifest.yml
@@ -1,10 +1,8 @@
-    applications:
-    - name: pm-analyzer-backend
-      path: .
-      buildpack: python_buildpack
-      command: uvicorn app.main:app --host 0.0.0.0 --port $PORT
-      memory: 512M
-      disk_quota: 512M
-      routes:
-      - route: pm-analyzer-backend-${org}-${space}.cfapps.${region}.hana.ondemand.com # IMPORTANT: Adjust this route to be unique!
-    
+applications:
+- name: pm-analyzer-backend
+  path: .
+  buildpack: python_buildpack
+  command: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+  memory: 512M
+  disk_quota: 512M
+  # Removed 'routes' section. The route will be provided via 'cf push -r' in GitHub Actions.
