--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,10 +57,11 @@ jobs:
           # Define the region based on your CF API endpoint
           # Example: us10-001 for api.cf.us10-001.hana.ondemand.com
           # You might need to adjust this logic based on your specific endpoint structure
-          CF_REGION: ${{ secrets.CF_API_ENDPOINT }} # This will be the full URL. We need to extract region.
+          CF_API_ENDPOINT_FULL: ${{ secrets.CF_API_ENDPOINT }} # Use a distinct name to avoid confusion
         run: |
           # Extract region from CF_API_ENDPOINT. Example: us10-001 from https://api.cf.us10-001.hana.ondemand.com
-          REGION=$(echo "${{ secrets.CF_API_ENDPOINT }}" | sed -E 's/https:\/\/api\.cf\.([a-zA-Z0-9-]+)\.hana\.ondemand\.com.*/\1/')
+          # Use CF_API_ENDPOINT_FULL from env
+          REGION=$(echo "$CF_API_ENDPOINT_FULL" | sed -E 's/https:\/\/api\.cf\.([a-zA-Z0-9-]+)\.hana\.ondemand\.com.*/\1/')
           if [ -z "$REGION" ]; then
             echo "Error: Could not extract region from CF_API_ENDPOINT. Please check its format."
             exit 1
@@ -69,7 +70,8 @@ jobs:
           # Construct a unique hostname for the backend application
           # Using GITHUB_RUN_ID for uniqueness
           BACKEND_HOSTNAME="pm-analyzer-backend-${GITHUB_RUN_ID}-${{ secrets.CF_ORG_SHORT_NAME }}-${{ secrets.CF_SPACE_SHORT_NAME }}"
-          BACKEND_ROUTE="${BACKEND_HOSTNAME}.cfapps.${REGION}.hana.ondemand.com"
+          BACKEND_DOMAIN="cfapps.${REGION}.hana.ondemand.com" # Extract just the domain part
+          BACKEND_ROUTE="${BACKEND_HOSTNAME}.${BACKEND_DOMAIN}"
 
           echo "Generated Backend Route: ${BACKEND_ROUTE}"
           # Set the output for the next steps to consume
@@ -77,7 +79,8 @@ jobs:
 
           # Push the backend application with the dynamically generated route
           cd backend
-          cf push pm-analyzer-backend -f manifest.yml -d cfapps.${REGION}.hana.ondemand.com -n ${BACKEND_HOSTNAME} --no-start
+          # Use --hostname and --domain flags
+          cf push pm-analyzer-backend -f manifest.yml --hostname ${BACKEND_HOSTNAME} --domain ${BACKEND_DOMAIN} --no-start
         working-directory: . # Run from root to ensure 'backend' directory is found
 
       - name: Start Backend Application
