--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -99,7 +99,127 @@ jobs:
       - name: List MTAR files for debugging
         run: |
           echo "--- Listing contents of mta_archives/ ---"
+          ls -l mta_archives/name: Deploy to SAP BTP Cloud Foundry
+
+on:
+  push:
+    branches:
+      - main # Trigger on push to the main branch
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest # Use a fresh Ubuntu environment for each job
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4 # Checkout the latest code from the repository
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4 # Install Node.js, required for mbt
+        with:
+          node-version: '18' # Use a stable LTS version of Node.js
+
+      - name: Install Cloud Foundry CLI
+        run: |
+          # Download the Cloud Foundry CLI binary
+          wget -q -O cf-cli-installer.deb "https://packages.cloudfoundry.org/stable?release=debian64&version=8.7.6&source=github"
+          # Install the CLI
+          sudo dpkg -i cf-cli-installer.deb
+          # Verify installation
+          cf version
+
+      - name: Install Cloud Foundry MultiApps Plugin
+        run: |
+          # Install the MultiApps plugin from the CF Community repository
+          cf install-plugin -r CF-Community "multiapps" -f
+          # Verify plugin installation
+          cf plugins
+
+      - name: Install MTA Build Tool (MBT)
+        run: npm install -g mbt@1.2.0
+
+      # --- Cloud Foundry Deployment Steps ---
+      - name: Login to Cloud Foundry
+        run: |
+          echo "Attempting CF login with API endpoint: $CF_API_ENDPOINT"
+          cf api $CF_API_ENDPOINT
+          cf auth "$CF_USERNAME" "$CF_PASSWORD"
+          cf target -o "$CF_ORG" -s "$CF_SPACE"
+        env:
+          CF_USERNAME: ${{ secrets.CF_USERNAME }}
+          CF_PASSWORD: ${{ secrets.CF_PASSWORD }}
+          CF_ORG: ${{ secrets.CF_ORG }}
+          CF_SPACE: ${{ secrets.CF_SPACE }}
+          CF_API_ENDPOINT: ${{ secrets.CF_API_ENDPOINT }}
+
+      - name: Push Backend Application
+        id: push_backend # Add an ID to this step to capture outputs
+        env:
+          # Define the region based on your CF API endpoint
+          # Example: us10-001 for api.cf.us10-001.hana.ondemand.com
+          CF_API_ENDPOINT_FULL: ${{ secrets.CF_API_ENDPOINT }}
+        run: |
+          # Extract region from CF_API_ENDPOINT. Example: us10-001 from https://api.cf.us10-001.hana.ondemand.com
+          REGION=$(echo "$CF_API_ENDPOINT_FULL" | sed -E 's/https:\/\/api\.cf\.([a-zA-Z0-9-]+)\.hana\.ondemand\.com.*/\1/')
+          if [ -z "$REGION" ]; then
+            echo "Error: Could not extract region from CF_API_ENDPOINT. Please check its format."
+            exit 1
+          fi
+
+          # Construct a unique hostname for the backend application
+          # Using GITHUB_RUN_ID for uniqueness
+          BACKEND_HOSTNAME="pm-analyzer-backend-${GITHUB_RUN_ID}-${{ secrets.CF_ORG_SHORT_NAME }}-${{ secrets.CF_SPACE_SHORT_NAME }}"
+          BACKEND_DOMAIN="cfapps.${REGION}.hana.ondemand.com"
+
+          echo "Generated Backend Hostname: ${BACKEND_HOSTNAME}"
+          echo "Generated Backend Domain: ${BACKEND_DOMAIN}"
+
+          # Set outputs for the next steps to consume
+          echo "backend_hostname=${BACKEND_HOSTNAME}" >> "$GITHUB_OUTPUT"
+          echo "backend_domain=${BACKEND_DOMAIN}" >> "$GITHUB_OUTPUT"
+
+          # Push the backend application with --no-route
+          cd backend
+          cf push pm-analyzer-backend -f manifest.yml --no-route --no-start
+        working-directory: . # Run from root to ensure 'backend' directory is found
+
+      - name: Create and Map Backend Route
+        run: |
+          # Get outputs from the previous step
+          BACKEND_HOSTNAME="${{ steps.push_backend.outputs.backend_hostname }}"
+          BACKEND_DOMAIN="${{ steps.push_backend.outputs.backend_domain }}"
+          BACKEND_ROUTE="${BACKEND_HOSTNAME}.${BACKEND_DOMAIN}"
+
+          echo "Creating route: ${BACKEND_ROUTE}"
+          cf create-route "${BACKEND_DOMAIN}" -n "${BACKEND_HOSTNAME}"
+          cf map-route pm-analyzer-backend "${BACKEND_DOMAIN}" -n "${BACKEND_HOSTNAME}"
+
+          echo "Mapped Backend Route: ${BACKEND_ROUTE}"
+        working-directory: . # Run from root
+
+      - name: Start Backend Application
+        run: |
+          # Start the backend application after push and route mapping
+          cf start pm-analyzer-backend
+        working-directory: .
+
+      - name: Build MTA Archive
+        run: |
+          mkdir -p mta_archives
+          mbt build -p=cf --mtar mta_archives/com.sap.pm.pmanalyzer_1.0.0.mtar
+          mv mta_archives/mta_archives/com.sap.pm.pmanalyzer_1.0.0.mtar mta_archives/
+        working-directory: .
+
+      - name: List MTAR files for debugging
+        run: |
+          echo "--- Listing contents of mta_archives/ ---"
           ls -l mta_archives/
+          echo "--- End of mta_archives/ listing ---"
+        working-directory: .
+
+      - name: Deploy MTA Archive
+        run: cf deploy mta_archives/com.sap.pm.pmanalyzer_1.0.0.mtar -f --retries 1
+
           echo "--- End of mta_archives/ listing ---"
         working-directory: .
 
