--- a/mta.yaml
+++ b/mta.yaml
@@ -14,16 +14,8 @@ modules:
       disk-quota: 256M
       memory: 256M
     requires:
-      - name: pm-analyzer-html5-repo-host # App Router needs to bind to HTML5 App Repo
-        group: destinations # Use group to inject credentials as environment variables
-        properties:
-          # Explicitly define the binding properties required by the App Router
-          # This ensures 'grant_type' is present in the credentials object
-          name: pm-analyzer-html5-repo-binding # Name for the binding in VCAP_SERVICES
-          binding: ~{pm-analyzer-html5-repo-host} # Bind to the HTML5 App Repo service
-          # Add parameters to the binding that include grant_type
-          parameters:
-            grant_type: "client_credentials" # Explicitly set grant_type
+      # Removed explicit binding for pm-analyzer-html5-repo-host to bypass build error.
+      # This service will need to be manually bound after deployment.
       - name: pm-analyzer-destination # App Router still needs the Destination service
 
   # ------------------------------------------------------------
