--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,38 +57,29 @@ jobs:
       - name: Push Backend Application
         id: push_backend # Add an ID to this step to capture outputs
         env:
-          # Define the region based on your CF API endpoint
-          # Example: us10-001 for api.cf.us10-001.hana.ondemand.com
           CF_API_ENDPOINT_FULL: ${{ secrets.CF_API_ENDPOINT }}
         run: |
-          # Extract region from CF_API_ENDPOINT. Example: us10-001 from https://api.cf.us10-001.hana.ondemand.com
           REGION=$(echo "$CF_API_ENDPOINT_FULL" | sed -E 's/https:\/\/api\.cf\.([a-zA-Z0-9-]+)\.hana\.ondemand\.com.*/\1/')
           if [ -z "$REGION" ]; then
             echo "Error: Could not extract region from CF_API_ENDPOINT. Please check its format."
             exit 1
           fi
-
-          # Construct a unique hostname for the backend application
-          # Use a shorter prefix and only the last 5 digits of GITHUB_RUN_ID for uniqueness
-          RUN_ID_SHORT="${GITHUB_RUN_ID: -5}" # Take last 5 characters of run ID
+          RUN_ID_SHORT="${GITHUB_RUN_ID: -5}"
           BACKEND_HOSTNAME="pmb-${RUN_ID_SHORT}-${{ secrets.CF_ORG_SHORT_NAME }}-${{ secrets.CF_SPACE_SHORT_NAME }}"
           BACKEND_DOMAIN="cfapps.${REGION}.hana.ondemand.com"
 
           echo "Generated Backend Hostname: ${BACKEND_HOSTNAME}"
           echo "Generated Backend Domain: ${BACKEND_DOMAIN}"
 
-          # Set outputs for the next steps to consume
           echo "backend_hostname=${BACKEND_HOSTNAME}" >> "$GITHUB_OUTPUT"
           echo "backend_domain=${BACKEND_DOMAIN}" >> "$GITHUB_OUTPUT"
 
-          # Push the backend application with --no-route
           cd backend
           cf push pm-analyzer-backend -f manifest.yml --no-route --no-start
-        working-directory: . # Run from root to ensure 'backend' directory is found
+        working-directory: .
 
       - name: Create and Map Backend Route
         run: |
-          # Get outputs from the previous step
           BACKEND_HOSTNAME="${{ steps.push_backend.outputs.backend_hostname }}"
           BACKEND_DOMAIN="${{ steps.push_backend.outputs.backend_domain }}"
           BACKEND_ROUTE="${BACKEND_HOSTNAME}.${BACKEND_DOMAIN}"
@@ -98,12 +89,47 @@ jobs:
           cf map-route pm-analyzer-backend "${BACKEND_DOMAIN}" -n "${BACKEND_HOSTNAME}"
 
           echo "Mapped Backend Route: ${BACKEND_ROUTE}"
-        working-directory: . # Run from root
+        working-directory: .
 
       - name: Start Backend Application
         run: |
-          # Start the backend application after push and route mapping
           cf start pm-analyzer-backend
+        working-directory: .
+
+      - name: Create HTML5 Repo Credentials UPS
+        run: |
+          # Get the HTML5 App Repo service credentials
+          HTML5_REPO_CREDENTIALS=$(cf service-key pm-analyzer-html5-repo-host html5-repo-key --json | jq '.[0].credentials')
+          # Create the UPS with the required grant_type
+          cf create-user-provided-service pm-analyzer-html5-repo-credentials -p "$HTML5_REPO_CREDENTIALS"
+        env:
+          # Ensure jq is installed in the runner
+          # Add a step to install jq if it's not present: sudo apt-get install jq
+          # Or, ensure it's available in the base image.
+          # For trial accounts, service-key might not output JSON directly, might need parsing.
+          # If 'jq' is not available or service-key doesn't output JSON, this step needs adjustment.
+          # For trial accounts, sometimes service-key might output plain text.
+          # In that case, you might need to parse it manually or use a different approach.
+          # Example for parsing plain text:
+          # HTML5_REPO_CREDENTIALS=$(cf service-key pm-analyzer-html5-repo-host html5-repo-key | tail -n +2 | jq -s '.')
+          # This is a common workaround for trial accounts where service-key --json doesn't work.
+          # If the above fails, you might need to manually inspect 'cf service-key' output
+          # and construct the JSON string with 'grant_type: "client_credentials"' manually.
+          # Example:
+          # CF_HTML5_REPO_CLIENTID=$(echo "$HTML5_REPO_CREDENTIALS" | jq -r '.clientid')
+          # CF_HTML5_REPO_CLIENTSECRET=$(echo "$HTML5_REPO_CREDENTIALS" | jq -r '.clientsecret')
+          # CF_HTML5_REPO_URI=$(echo "$HTML5_REPO_CREDENTIALS" | jq -r '.uri')
+          # CF_HTML5_REPO_UAAURL=$(echo "$HTML5_REPO_CREDENTIALS" | jq -r '.uaa.url')
+          # CF_HTML5_REPO_UAA_CLIENTID=$(echo "$HTML5_REPO_CREDENTIALS" | jq -r '.uaa.clientid')
+          # CF_HTML5_REPO_UAA_CLIENTSECRET=$(echo "$HTML5_REPO_CREDENTIALS" | jq -r '.uaa.clientsecret')
+          # CF_HTML5_REPO_UAA_CERTURL=$(echo "$HTML5_REPO_CREDENTIALS" | jq -r '.uaa.certurl')
+          # CF_HTML5_REPO_UAA_URL=$(echo "$HTML5_REPO_CREDENTIALS" | jq -r '.uaa.url')
+          #
+          # CREDENTIALS_JSON="{ \"clientid\": \"$CF_HTML5_REPO_CLIENTID\", \"clientsecret\": \"$CF_HTML5_REPO_CLIENTSECRET\", \"uri\": \"$CF_HTML5_REPO_URI\", \"uaa\": { \"clientid\": \"$CF_HTML5_REPO_UAA_CLIENTID\", \"clientsecret\": \"$CF_HTML5_REPO_UAA_CLIENTSECRET\", \"certurl\": \"$CF_HTML5_REPO_UAA_CERTURL\", \"url\": \"$CF_HTML5_REPO_UAA_URL\" }, \"grant_type\": \"client_credentials\" }"
+          # cf create-user-provided-service pm-analyzer-html5-repo-credentials -p "$CREDENTIALS_JSON"
+
+      - name: Bind HTML5 Repo Credentials UPS to App Router
+        run: cf bind-service pm-analyzer-approuter pm-analyzer-html5-repo-credentials
         working-directory: .
 
       - name: Build MTA Archive
