--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,37 +58,43 @@ jobs:
         run: cf delete -f pm-analyzer-backend || true # Delete if exists, '|| true' prevents step from failing if app doesn't exist
 
       - name: Push Backend Application
-        # Removed dynamic route generation. Route is now defined in manifest.yml
+        id: push_backend # Add an ID to this step to capture outputs
+        env:
+          CF_API_ENDPOINT_FULL: ${{ secrets.CF_API_ENDPOINT }}
         run: |
-          cd backend
-          cf push pm-analyzer-backend -f manifest.yml --no-start # Push with route from manifest
-        working-directory: . # Run from root to ensure 'backend' directory is found
+          REGION=$(echo "$CF_API_ENDPOINT_FULL" | sed -E 's/https:\/\/api\.cf\.([a-zA-Z0-9-]+)\.hana\.ondemand\.com.*/\1/')
+          if [ -z "$REGION" ]; then
+            echo "Error: Could not extract region from CF_API_ENDPOINT. Please check its format."
+            exit 1
+          fi
 
-      # Removed: Create and Map Backend Route step. cf push handles it.
-      # - name: Create and Map Backend Route
-      #   run: |
-      #     BACKEND_HOSTNAME="${{ steps.push_backend.outputs.backend_hostname }}"
-      #     BACKEND_DOMAIN="${{ steps.push_backend.outputs.backend_domain }}"
-      #     BACKEND_ROUTE="${BACKEND_HOSTNAME}.${BACKEND_DOMAIN}"
-      #     echo "Attempting to delete existing route (if any) to manage quota: ${BACKEND_ROUTE}"
-      #     cf delete-route "${BACKEND_DOMAIN}" -n "${BACKEND_HOSTNAME}" -f || true
-      #     echo "Creating route: ${BACKEND_DOMAIN}" -n "${BACKEND_HOSTNAME}"
-      #     cf create-route "${BACKEND_DOMAIN}" -n "${BACKEND_HOSTNAME}"
-      #     cf map-route pm-analyzer-backend "${BACKEND_DOMAIN}" -n "${BACKEND_HOSTNAME}"
-      #     echo "Mapped Backend Route: ${BACKEND_ROUTE}"
-      #   working-directory: .
+          # Use a fixed, simple hostname for the backend application
+          FIXED_BACKEND_HOSTNAME="pm-analyzer-backend-dev"
+          BACKEND_DOMAIN="cfapps.${REGION}.hana.ondemand.com"
+
+          echo "Using Fixed Backend Hostname: ${FIXED_BACKEND_HOSTNAME}"
+          echo "Using Backend Domain: ${BACKEND_DOMAIN}"
+
+          # Set outputs for the next steps to consume
+          echo "backend_hostname=${FIXED_BACKEND_HOSTNAME}" >> "$GITHUB_OUTPUT"
+          echo "backend_domain=${BACKEND_DOMAIN}" >> "$GITHUB_OUTPUT"
+
+          cd backend
+          cf push pm-analyzer-backend -f manifest.yml --hostname ${FIXED_BACKEND_HOSTNAME} --domain ${BACKEND_DOMAIN} --no-start
+        working-directory: .
 
       - name: Start Backend Application
         run: |
-          # Start the backend application after push
           cf start pm-analyzer-backend
         working-directory: .
 
       - name: Build MTA Archive
+        # Build the MTAR to a temporary location, then move it
         run: |
-          mkdir -p mta_archives
-          mbt build -p=cf --mtar mta_archives/com.sap.pm.pmanalyzer_1.0.0.mtar
-        working-directory: .
+          mbt build -p=cf --mtar ../temp_mta_archive.mtar # Build outside mta_archives
+          mkdir -p mta_archives # Ensure target directory exists
+          mv ../temp_mta_archive.mtar mta_archives/com.sap.pm.pmanalyzer_1.0.0.mtar # Move and rename
+        working-directory: ./pm-analyzer-fiori # Build from the Fiori app directory
 
       - name: List MTAR files for debugging
         run: |
