--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,43 +58,24 @@ jobs:
         run: cf delete -f pm-analyzer-backend || true # Delete if exists, '|| true' prevents step from failing if app doesn't exist
 
       - name: Push Backend Application
-        id: push_backend # Add an ID to this step to capture outputs
-        env:
-          CF_API_ENDPOINT_FULL: ${{ secrets.CF_API_ENDPOINT }}
+        # Removed dynamic route generation. Route is now defined in manifest.yml
         run: |
-          REGION=$(echo "$CF_API_ENDPOINT_FULL" | sed -E 's/https:\/\/api\.cf\.([a-zA-Z0-9-]+)\.hana\.ondemand\.com.*/\1/')
-          if [ -z "$REGION" ]; then
-            echo "Error: Could not extract region from CF_API_ENDPOINT. Please check its format."
-            exit 1
-          fi
-
-          # Use a fixed, simple hostname for the backend application
-          FIXED_BACKEND_HOSTNAME="pm-analyzer-backend-dev"
-          BACKEND_DOMAIN="cfapps.${REGION}.hana.ondemand.com"
-
-          echo "Using Fixed Backend Hostname: ${FIXED_BACKEND_HOSTNAME}"
-          echo "Using Backend Domain: ${BACKEND_DOMAIN}"
-
-          # Set outputs for the next steps to consume
-          echo "backend_hostname=${FIXED_BACKEND_HOSTNAME}" >> "$GITHUB_OUTPUT"
-          echo "backend_domain=${BACKEND_DOMAIN}" >> "$GITHUB_OUTPUT"
-
           cd backend
-          cf push pm-analyzer-backend -f manifest.yml --hostname ${FIXED_BACKEND_HOSTNAME} --domain ${BACKEND_DOMAIN} --no-start
-        working-directory: .
+          # cf push will now read the route directly from manifest.yml
+          cf push pm-analyzer-backend -f manifest.yml --no-start
+        working-directory: . # Run from root to ensure 'backend' directory is found
 
       - name: Start Backend Application
         run: |
+          # Start the backend application after push
           cf start pm-analyzer-backend
         working-directory: .
 
       - name: Build MTA Archive
-        # Build the MTAR to a temporary location, then move it
         run: |
-          mbt build -p=cf --mtar ../temp_mta_archive.mtar # Build outside mta_archives
-          mkdir -p mta_archives # Ensure target directory exists
-          mv ../temp_mta_archive.mtar mta_archives/com.sap.pm.pmanalyzer_1.0.0.mtar # Move and rename
-        working-directory: ./pm-analyzer-fiori # Build from the Fiori app directory
+          mkdir -p mta_archives
+          mbt build -p=cf --mtar mta_archives/com.sap.pm.pmanalyzer_1.0.0.mtar
+        working-directory: .
 
       - name: List MTAR files for debugging
         run: |
