--- a/approuter/xs-app.json
+++ b/approuter/xs-app.json
@@ -1,19 +1,25 @@
 {
   "welcomeFile": "/pm-analyzer-fiori/index.html",
-  "authenticationMethod": "none", 
+  "authenticationMethod": "none",
   "routes": [
     {
       "source": "^/api/(.*)$",
       "target": "$1",
       "destination": "pm-analyzer-backend",
-      "authenticationType": "none", 
+      "authenticationType": "none",
       "httpMethods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
+    },
+    {
+      "source": "^/pm-analyzer-fiori/(.*)$", 
+      "target": "$1",
+      "localDir": "resources/pm-analyzer-fiori", 
+      "authenticationType": "none"
     },
     {
       "source": "^(.*)$",
       "target": "$1",
       "service": "html5-apps-repo-rt",
-      "authenticationType": "none" 
+      "authenticationType": "none"
     }
   ]
 }
