--- a/pm-analyzer-fiori/package.json
+++ b/pm-analyzer-fiori/package.json
@@ -15,7 +15,8 @@
     "build": "ui5 build --clean-dest --config ui5.yaml",
     "deploy": "fiori verify",
     "deploy-config": "fiori add deploy-config",
-    "build:cf": "ui5 build --clean-dest --config ui5-deploy.yaml --include-task=generateCachebusterInfo --target-dir ../approuter/resources/pm-analyzer-fiori",
+    "build:cf": "ui5 build preload --clean-dest --config ui5-deploy.yaml --include-task=generateCachebusterInfo",
+    "postbuild:cf": "rimraf ../approuter/resources/pm-analyzer-fiori && mkdir -p ../approuter/resources/pm-analyzer-fiori && cp -r dist/* ../approuter/resources/pm-analyzer-fiori",
     "build:mta": "rimraf resources webapp/resources webapp/test-resources dist && mbt build --mtar archive",
     "start-mock": "fiori run --config ./ui5-mock.yaml --open 'test/flpSandbox.html?sap-ui-xx-viewCache=false'",
     "start-noflp": "fiori run --open 'index.html?sap-ui-xx-viewCache=false'"
